# 2fa

./: .dockerignore  .gitignore  AGENTS.md  CHAT.md  Cargo.toml  README.md  ROADMAP.md  index.html  lerna.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/workflows/: deploy-pages.yml
cli/: Cargo.toml
cli/src/: main.rs
crates/crypto-core/: Cargo.toml
crates/crypto-core/src/: lib.rs
crates/mobile-bridge/: Cargo.toml
crates/mobile-bridge/src/: lib.rs
crates/otp-core/: Cargo.toml
crates/otp-core/src/: lib.rs
crates/provider-core/: Cargo.toml
crates/provider-core/src/: lib.rs
crates/server-core/: Cargo.toml  build.rs
crates/server-core/migrations/: 0001_init.sql  0002_admin_billing_policy.sql
crates/server-core/src/: admin.rs  billing_policy.rs  db.rs  lib.rs  models.rs
crates/sync-core/: Cargo.toml
crates/sync-core/src/: lib.rs
crates/wasm-core/: Cargo.toml
crates/wasm-core/src/: lib.rs
extension/: README.md
infra/docker/: .env.example  README.md  docker-compose.postgres.yml  docker-compose.sqlite.yml  server-admin.nginx.conf
legacy/: index.html
mobile/: README.md
mobile/android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
mobile/android/app/: build.gradle.kts  proguard-rules.pro
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/com/gaubee/twofa/: MainActivity.kt
mobile/android/app/src/main/java/com/gaubee/twofa/core/: RustMobileBridge.kt  VaultStore.kt
mobile/android/app/src/main/java/com/gaubee/twofa/ui/: GaubeeTwoFaApp.kt
mobile/android/app/src/main/java/uniffi/gaubee_2fa_mobile_bridge/: gaubee_2fa_mobile_bridge.kt
mobile/android/app/src/main/res/values/: strings.xml
mobile/android/gradle/wrapper/: gradle-wrapper.properties
mobile/ios/: .gitignore  README.md  project.yml
mobile/ios/App/: ContentView.swift  GaubeeTwoFAApp.swift
mobile/ios/Core/: RustMobileBridge.swift  VaultStore.swift
scripts/: auto-update-daemon.sh  build-mobile-android-rust.ts  build-mobile-ios-rust.ts  build-wasm.ts  generate-mobile-bindings.ts  install-www.sh  release.ts  setup-auto-update.sh
server/: Cargo.toml  Dockerfile
server-admin/: Dockerfile  README.md  index.html  package.json  vite.config.ts
server-admin/src/: index.css  main.tsx  router.tsx
server-admin/src/components/: admin-sidebar.tsx  app-shell.tsx  billing-policy-form.tsx  data-table.tsx  header-actions.tsx  stats-grid.tsx
server-admin/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  skeleton.tsx  table.tsx  textarea.tsx
server-admin/src/lib/: admin-api.ts  admin-auth.ts  admin-shell.ts  admin-types.ts  format.ts
server-admin/src/routes/: audit-page.tsx  billing-page.tsx  overview-page.tsx  storage-page.tsx
server/src/: admin_http.rs  grpc.rs  http.rs  main.rs  service.rs
specs/: 01-vision-and-goals.md  02-product-model.md  03-web-product-spec.md  04-sync-security-and-provider-spec.md  05-server-and-admin-spec.md  06-client-platform-spec.md  07-engineering-quality-and-release-spec.md  README.md
src/: App.tsx  index.css
src/components/ui/: button.tsx
src/lib/: otp.ts
web/: index.html  package.json
web/legacy/: app.js  styles.css
web/public/: site.webmanifest
web/src/: App.tsx
web/src/components/: self-provider-card.tsx  webdav-provider-card.tsx
web/src/components/ui/: card.tsx  input.tsx  textarea.tsx
web/src/lib/: otp.ts  rust-core.ts  self-provider-api.ts  self-provider-snapshot.ts  vault-store.ts  webdav-provider.ts  webdav-snapshot.ts
