[workspace]
members = [
  "crates/otp-core",
  "crates/crypto-core",
  "crates/sync-core",
  "crates/provider-core",
  "crates/wasm-core",
  "crates/mobile-bridge",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
async-trait = "0.1"
base64 = "0.22"
bip39 = { version = "2", default-features = false, features = ["std"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
clap = { version = "4.5", features = ["derive", "env"] }
data-encoding = "2.9"
ed25519-dalek = "2.2"
futures-util = "0.3"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
hmac = "0.12"
prost = "0.14"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
wasm-bindgen = "0.2"
zeroize = { version = "1", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"
