[package]
name = "gaubee-2fa-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
axum.workspace = true
clap.workspace = true
futures-util.workspace = true
gaubee-2fa-crypto-core = { path = "../crates/crypto-core" }
gaubee-2fa-server-core = { path = "../crates/server-core" }
sqlx.workspace = true
tokio.workspace = true
tonic.workspace = true
tonic-web.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
