[package]
name = "gaubee-2fa-crypto-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bip39.workspace = true
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true
getrandom.workspace = true
hex.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[lints]
workspace = true
